# Series

./: .gitignore  CMakeLists.txt
include/: arvore.h  lista.h  momento.h  serie.h
src/: main.cpp  serie.cpp
